--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,5 +1,5 @@
 $color-tc39: #f90;
-$color-primary: #83c9b5;
+$color-primary: #77ccbb;
 $color-bg: #fefefe;
 $color-spacer: #eee;
 $color-text: #000;
@@ -7,7 +7,7 @@ $color-nav: #444;
 $color-submenu-bg: #f9f9f9;
 $font-weight-light: 300;
 $font-weight-regular: 400;
-$font-weight-semi-bold: 600;
+$font-weight-semi-bold: 550;
 $grid-gutter: 40px;
 $spacing-paragraph: 40px;
 $bp-tablet: 660px;
